Added body in rules page and fixed index redirect

--- a/rules.html
+++ b/rules.html
@@ -1,270 +1,280 @@
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<link rel="icon" type="image/png" href="img/favicon.png">
-	<title>OSDHack'22 | Rules and FAQs</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <link rel="icon" type="image/png" href="img/favicon.png" />
+  <title>OSDHack'22 | Rules and FAQs</title>
 
-	<!-- Google font -->
-	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700,900" rel="stylesheet">
+  <!-- Google font -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Poppins:400,700,900"
+    rel="stylesheet"
+  />
 
-	<!-- Bootstrap -->
-	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
+  <!-- Bootstrap -->
+  <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
 
-	<!-- Owl Carousel -->
-	<link type="text/css" rel="stylesheet" href="css/owl.carousel.css" />
-	<link type="text/css" rel="stylesheet" href="css/owl.theme.default.css" />
+  <!-- Owl Carousel -->
+  <link type="text/css" rel="stylesheet" href="css/owl.carousel.css" />
+  <link type="text/css" rel="stylesheet" href="css/owl.theme.default.css" />
 
-	<!-- Font Awesome Icon -->
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+  <!-- Font Awesome Icon -->
+  <link rel="stylesheet" href="css/font-awesome.min.css" />
 
-	<!-- Custom stlylesheet -->
-	<link type="text/css" rel="stylesheet" href="css/style.css" />
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="css/rules.css">
+  <!-- Custom stlylesheet -->
+  <link type="text/css" rel="stylesheet" href="css/style.css" />
+  <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="css/rules.css" />
 
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-			  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-			  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-			<![endif]-->
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <!-- <div id="backgound_logo" style="border-radius:0px 0px 30px 30px;width:100px;height:150px;background-color: #fff;opacity: 0.2;z-index: 997;position: fixed; left: 35px;"></div> -->
 
-
-
-<a href="#top">
-  <div id="osdhack">
-    <img alt="logo" src="img/osdhack-sticker.png" class="logo-alt-img" style="width: 100%;">
+<body>
+  <a href="index.html">
+    <div id="osdhack">
+      <img
+        alt="logo"
+        src="img/osdhack-sticker.png"
+        class="logo-alt-img"
+        style="width: 100%"
+      />
+    </div>
+  </a>
+  <div id="jiit">
+    <img
+      alt="logo"
+      src="img/jiit logo.png"
+      class="logo-alt-img"
+      style="width: 100%"
+    />
   </div>
-</a>
-<div id="jiit">
-  <img alt="logo" src="img/jiit logo.png" class="logo-alt-img" style="width: 100%;">
-</div>
 
-
-	<!-- Header -->
-	<header id="header" class="transparent-navbar">
-		<!-- container -->
-		<div class="container">
-			<!-- navbar header -->
-			<div class="navbar-header">
-				<!-- Logo -->
-				<div class="navbar-brand">
-					<!-- <a class="logo" href="index.html">
+  <!-- Header -->
+  <header id="header" class="transparent-navbar">
+    <!-- container -->
+    <div class="container">
+      <!-- navbar header -->
+      <div class="navbar-header">
+        <!-- Logo -->
+        <div class="navbar-brand">
+          <!-- <a class="logo" href="index.html">
 						<img class="logo-img" src="img/osdhack-sticker.png" alt="logo">
 						<img class="logo-alt-img" src="img/osdhack-sticker.png" alt="logo">
 					</a> -->
-				</div>
-				<!-- /Logo -->
+        </div>
+        <!-- /Logo -->
 
-				<!-- Mobile toggle -->
-				<button class="navbar-toggle">
-					<i class="fa fa-bars"></i>
-				</button>
-				<!-- /Mobile toggle -->
-			</div>
-			<!-- /navbar header -->
+        <!-- Mobile toggle -->
+        <button class="navbar-toggle">
+          <i class="fa fa-bars"></i>
+        </button>
+        <!-- /Mobile toggle -->
+      </div>
+      <!-- /navbar header -->
 
-			<!-- Navigation -->
-			<nav id="nav">
-				<ul class="main-nav nav navbar-nav navbar-right">
-					<li><a href="index.html#home">Home</a></li>
-					<li><a href="index.html#about">About</a></li>
-					<li><a href="index.html#guest_speakers">Speakers</a></li>
-					<li><a href="index.html#schedule">Schedule</a></li>
+      <!-- Navigation -->
+      <nav id="nav">
+        <ul class="main-nav nav navbar-nav navbar-right">
+          <li><a href="index.html#home">Home</a></li>
+          <li><a href="index.html#about">About</a></li>
+          <li><a href="index.html#guest_speakers">Speakers</a></li>
+          <li><a href="index.html#schedule">Schedule</a></li>
           <li><a href="index.html#contact">Contact</a></li>
-					<li class="active" id="rules_active"><a href="rules.html ">Rules</a></li>
-				</ul>
-			</nav>
-			<!-- /Navigation -->
-		</div>
-		<!-- /container -->
-	</header>
-	<!-- /Header -->
-  
-   <h1>Rules</h1> 
-   <hr class="style-two">
-<ul class="rules" >
+          <li class="active" id="rules_active">
+            <a href="rules.html ">Rules</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- /Navigation -->
+    </div>
+    <!-- /container -->
+  </header>
+  <!-- /Header -->
+
+  <h1>Rules</h1>
+  <hr class="style-two" />
+  <ul class="rules">
     <li>The Hackathon is open to all.</li>
     <li>Allowed team size: 2-4 members.</li>
-    <li>There is no restriction on the type of project you come up with, or the languages/tools you use. It can be
-      anything from a web app to a device driver (as long as it is not a hardware project).</li>
-    <li>All code and assests must be created and committed within the time constrictions of the Hackathon. Late commits may not be considered, so avoid any last minute Red Bull rushes.</li>
-    <li>Reusing or incorporating existing open source code or copyright free assests to create your magic (because that's what someone else's code seems like) is allowed, provided that they are appropriately attributed and their license agreements are followed.</li>
-    
-    <li>All code written must be compatible with an Open-Source license and should be public.</li>
+    <li>
+      There is no restriction on the type of project you come up with, or the
+      languages/tools you use. It can be anything from a web app to a device
+      driver (as long as it is not a hardware project).
+    </li>
+    <li>
+      All code and assests must be created and committed within the time
+      constrictions of the Hackathon. Late commits may not be considered, so
+      avoid any last minute Red Bull rushes.
+    </li>
+    <li>
+      Reusing or incorporating existing open source code or copyright free
+      assests to create your magic (because that's what someone else's code
+      seems like) is allowed, provided that they are appropriately attributed
+      and their license agreements are followed.
+    </li>
+
+    <li>
+      All code written must be compatible with an Open-Source license and should
+      be public.
+    </li>
     <li>Git should be your primary version control system.</li>
-    <li>The Organizing Team's decision on conflicts, results, prizes or any other dispute would be made in all fairness and stands final.</li>
-</ul>
+    <li>
+      The Organizing Team's decision on conflicts, results, prizes or any other
+      dispute would be made in all fairness and stands final.
+    </li>
+  </ul>
 
-
-
-
-
-
-<div class='faq'>
-<h1>FAQs</h1>
-<hr class="style-two">
-<div class="global-label">
-
-
-</div>
-<!--1 question-->
-  <div >
-    <div class="faq-label">
-      <div class="faq-label-text">
-        What's a Hackathon, and can I participate?
+  <div class="faq">
+    <h1>FAQs</h1>
+    <hr class="style-two" />
+    <div class="global-label"></div>
+    <!--1 question-->
+    <div>
+      <div class="faq-label">
+        <div class="faq-label-text">
+          What's a Hackathon, and can I participate?
+        </div>
+        <div class="faq-label-icon">
+          <span class="material-icons"> expand_more </span>
+        </div>
       </div>
-      <div class="faq-label-icon">
-        <span class="material-icons">
-          expand_more
-        </span>
+      <div class="faq-answer">
+        <div class="faq-answer-content">
+          A Hackathon is an intense event that brings together designers and
+          developers along with industry experts to identify problems and create
+          software solutions, usually within 24-48 hours. Whether that's high
+          school, undergrad, or graduate, we believe you can get something out
+          of the event.
+        </div>
       </div>
-
     </div>
-    <div class="faq-answer ">
-      <div class="faq-answer-content">
-        A Hackathon is an intense event that brings together designers and developers along with industry experts to identify problems and create software solutions, usually within 24-48 hours. Whether that's high school, undergrad, or graduate, we believe you can get something out of the event.
-
+    <!--2 question-->
+    <div>
+      <div class="faq-label">
+        <div class="faq-label-text">How much does it cost?</div>
+        <div class="faq-label-icon">
+          <span class="material-icons"> expand_more </span>
+        </div>
       </div>
-
+      <div class="faq-answer">
+        <div class="faq-answer-content">
+          Zero. Zip. Zilch. Nada. Nothing. Admission to OSDHack is completely
+          free for everyone!
+        </div>
+      </div>
     </div>
-  </div>
-  <!--2 question-->
-  <div >
-    <div class="faq-label">
-      <div class="faq-label-text">
-        How much does it cost?
+    <!-- 3 question -->
+    <div>
+      <div class="faq-label">
+        <div class="faq-label-text">
+          What if I don't want to present my hack?
+        </div>
+        <div class="faq-label-icon">
+          <span class="material-icons"> expand_more </span>
+        </div>
       </div>
-      <div class="faq-label-icon">
-        <span class="material-icons">
-          expand_more
-        </span>
+      <div class="faq-answer">
+        <div class="faq-answer-content">
+          Unfinished or unimpressive (so you think) projects should be presented
+          anyway! Presenting your hack gives you a chance to be proud of what
+          you’ve done, and a constructive perspective of where you should be
+          headed next.
+        </div>
       </div>
-
     </div>
-    <div class="faq-answer ">
-      <div class="faq-answer-content">
-        Zero. Zip. Zilch. Nada. Nothing. Admission to OSDHack is completely free for everyone!
-
+    <!--question 4-->
+    <div>
+      <div class="faq-label">
+        <div class="faq-label-text">Can we apply as a team?</div>
+        <div class="faq-label-icon">
+          <span class="material-icons"> expand_more </span>
+        </div>
       </div>
-
+      <div class="faq-answer">
+        <div class="faq-answer-content">
+          Yes! This hackathon is strictly a team competition. We believe that
+          you’re stronger as a team than you are apart. You can join or create a
+          team once you've started an individual application.
+        </div>
+      </div>
     </div>
-  </div>
-<!-- 3 question -->
-<div >
-    <div class="faq-label">
-      <div class="faq-label-text">
-        What if I don't want to present my hack?
-      </div>
-      <div class="faq-label-icon">
-        <span class="material-icons">
-          expand_more
-        </span>
-      </div>
-
-    </div>
-    <div class="faq-answer ">
-      <div class="faq-answer-content">
-        Unfinished or unimpressive (so you think) projects should be presented anyway! Presenting your hack gives you a chance to be proud of what you’ve done, and a constructive perspective of where you should be headed next.
-
-      </div>
-
-    </div>
-  </div>
-  <!--question 4-->
-  <div >
-    <div class="faq-label">
-      <div class="faq-label-text">
-        Can we apply as a team?
-      </div>
-      <div class="faq-label-icon">
-        <span class="material-icons">
-          expand_more
-        </span>
-      </div>
-
-    </div>
-    <div class="faq-answer ">
-      <div class="faq-answer-content">
-        Yes! This hackathon is strictly a team competition. We believe that you’re stronger as a team than you are apart. You can join or create a team once you've started an individual application.
-
-      </div>
-
-    </div>
-  </div>
     <!--question 5-->
-  <div >
-    <div class="faq-label">
-      <div class="faq-label-text">
-        How big can a team be?
+    <div>
+      <div class="faq-label">
+        <div class="faq-label-text">How big can a team be?</div>
+        <div class="faq-label-icon">
+          <span class="material-icons"> expand_more </span>
+        </div>
       </div>
-      <div class="faq-label-icon">
-        <span class="material-icons">
-          expand_more
-        </span>
+      <div class="faq-answer">
+        <div class="faq-answer-content">
+          Up to 4 people large! Pro Tip: Aim to have a mix of people with both
+          design and developer skills
+        </div>
       </div>
-
     </div>
-    <div class="faq-answer ">
-      <div class="faq-answer-content">
-        Up to 4 people large! Pro Tip: Aim to have a mix of people with both design and developer skills
-      </div>
-
-    </div>
-  </div>
     <!--question 6-->
-  <div >
-    <div class="faq-label">
-      <div class="faq-label-text">
-        What if I don't have a team or an idea?
+    <div>
+      <div class="faq-label">
+        <div class="faq-label-text">
+          What if I don't have a team or an idea?
+        </div>
+        <div class="faq-label-icon">
+          <span class="material-icons"> expand_more </span>
+        </div>
       </div>
-      <div class="faq-label-icon">
-        <span class="material-icons">
-          expand_more
-        </span>
+      <div class="faq-answer">
+        <div class="faq-answer-content">
+          Don't worry, most people don’t! We’ll have team formation and ideation
+          events geared towards helping you find people to work with. It’s
+          perfectly normal to go around to people, tell them you’re looking for
+          a team, and ask if you can help out. You can also show yourself off at
+          #teamup!
+        </div>
       </div>
-
     </div>
-    <div class="faq-answer ">
-      <div class="faq-answer-content">
-        Don't worry, most people don’t! We’ll have team formation and ideation events geared towards helping you find people to work with. It’s perfectly normal to go around to people, tell them you’re looking for a team, and ask if you can help out. You can also show yourself off at #teamup!
-      </div>
-
-    </div>
-  </div>
     <!--question 7-->
-  <div >
-    <div class="faq-label">
-      <div class="faq-label-text">
-        Can I attend talks + workshops without being accepted for the hackathon?      </div>
-      <div class="faq-label-icon">
-        <span class="material-icons">
-          expand_more
-        </span>
+    <div>
+      <div class="faq-label">
+        <div class="faq-label-text">
+          Can I attend talks + workshops without being accepted for the
+          hackathon?
+        </div>
+        <div class="faq-label-icon">
+          <span class="material-icons"> expand_more </span>
+        </div>
       </div>
-
-    </div>
-    <div class="faq-answer ">
-      <div class="faq-answer-content">
-        Yes! The conference is going to be open to everyone who's interested. We will keep you folks updated with the schedule and the links to the talks.
+      <div class="faq-answer">
+        <div class="faq-answer-content">
+          Yes! The conference is going to be open to everyone who's interested.
+          We will keep you folks updated with the schedule and the links to the
+          talks.
+        </div>
       </div>
-
     </div>
   </div>
-</div>
-<div class="text-center">
-
-  <!-- <span class="copyright"> -->
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  &copy;
-  <script>document.write(new Date().getFullYear());</script> All rights reserved by <a
-    href="https://osdc.netlify.app/" target="_blank">OSDC</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  <!-- </span> -->
-</div>
-<script src="./js/jquery.min.js"></script>
-<script src="rules.js"></script>
+  <div class="text-center">
+    <!-- <span class="copyright"> -->
+    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+    &copy;
+    <script>
+      document.write(new Date().getFullYear());
+    </script>
+    All rights reserved by
+    <a href="https://osdc.netlify.app/" target="_blank">OSDC</a>
+    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+    <!-- </span> -->
+  </div>
+  <script src="./js/jquery.min.js"></script>
+  <script src="rules.js"></script>
+</body>
