Remove prize breakup

--- a/index.html
+++ b/index.html
@@ -438,14 +438,19 @@
       <div class="container">
         <div class="row">
           <!-- section title -->
-          <div class="section-title">
+          <div class="section-title section-title-prize">
             <h3 class="title"><span>Prizes</span></h3>
+            <div class="text-center" style="margin-top: 30px">
+              <h2>Prizes over  <span style="color: #c71239">INR 1,00,000</span> and more</h2>
+              <h2>Special Prizes for mini event winners 🎁</h2>
+              <h3 style="margin-top: 30px;">Detailed Prize break-up TBA soon ⌛</h3>
+            </div>
           </div>
           <!-- /section title -->
 
           <!-- contact -->
 
-          <div class="col-sm-4">
+          <!-- <div class="col-sm-4">
             <div class="contact">
               <div
                 class="speaker-img"
@@ -460,10 +465,10 @@
               <h3>Rs 20,000</h3>
               <h4 style="margin-top: -10px">2nd Prize</h4>
             </div>
-          </div>
+          </div> -->
           <!-- contact -->
 
-          <div class="col-sm-4">
+          <!-- <div class="col-sm-4">
             <div class="contact">
               <div
                 class="speaker-img"
@@ -478,10 +483,10 @@
               <h3>Rs 30,000</h3>
               <h4 style="margin-top: -10px">1st Prize</h4>
             </div>
-          </div>
+          </div> -->
           <!-- contact -->
 
-          <div class="col-sm-4">
+          <!-- <div class="col-sm-4">
             <div class="contact">
               <div
                 class="speaker-img"
@@ -493,14 +498,14 @@
               <h4 style="margin-top: -10px">3rd Prize</h4>
             </div>
           </div>
-        </div>
-        <div class="row">
+        </div> -->
+        <!-- <div class="row">
           <div id="demo" class="collapse">
-            <div class="col-sm-2">
+            <div class="col-sm-2"> -->
               <!--for begining-->
-            </div>
+            <!-- </div> -->
             <!-- contact -->
-            <div class="col-sm-4">
+            <!-- <div class="col-sm-4">
               <div class="contact">
                 <div
                   class="speaker-img"
@@ -514,9 +519,9 @@
                   (Best JIIT-Only Team)
                 </h4>
               </div>
-            </div>
+            </div> -->
             <!-- contact -->
-            <div class="col-sm-4">
+            <!-- <div class="col-sm-4">
               <div class="contact">
                 <div
                   class="speaker-img"
@@ -558,7 +563,7 @@
       >
         Show More
       </button>
-    </div>
+    </div> -->
 
     <!-- Speakers -->
     <div id="guest_speakers" class="section">
