fixed event alignment in timeline

--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                   </div>
                 </div>
                 <div class="event-content">
-                  <p class="event-time" style="padding-top: 35px">
+                  <p class="event-time date-event">
                     <i class="fa fa-clock-o"></i> 12:30 PM - 01:30 PM
                   </p>
                   <h3 class="event-title">Event Inauguration</h3>
@@ -766,7 +766,7 @@
                   </div>
 
                   <div class="event-content">
-                    <p class="event-time" style="padding-top: 35px">
+                    <p class="event-time date-event">
                       <i class="fa fa-clock-o"></i> 12:00 AM
                     </p>
                     <h3 class="event-title">Registrations Close</h3>
@@ -803,7 +803,7 @@
                     </div>
 
                     <div class="event-content">
-                      <p class="event-time" style="padding-top: 35px">
+                      <p class="event-time date-event">
                         <i class="fa fa-clock-o"></i> 12:00 PM - 05:00 PM
                       </p>
                       <h3 class="event-title">Mid Review</h3>
@@ -833,7 +833,7 @@
                       </div>
 
                       <div class="event-content">
-                        <p class="event-time" style="padding-top: 35px">
+                        <p class="event-time date-event">
                           <i class="fa fa-clock-o"></i> 10:00 AM - 03:00 PM
                         </p>
                         <h3 class="event-title">Final Review</h3>
