--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
               </div>
               <a href="https://jiitodc.netlify.app/" target="_blank">
                 <h3 style="color: white">
-                  JIIT Open Source <br />Developer's Circle
+                  JIIT Open Source <br />Developers Circle
                 </h3>
               </a>
             </div>
