changed the favicon and some meta tags

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://osdhack.ossdevs.com/" />
+    <meta property="og:url" content="https://osdhackjiit.com/">
     <meta property="og:title" content="OSDHack'22" />
     <meta
       property="og:description"
@@ -38,7 +38,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://osdhack.ossdevs.com/" />
+    <meta property="twitter:url" content="https://osdhackjiit.com/">
     <meta property="twitter:title" content="OSDHack'22" />
     <meta
       property="twitter:description"
