--- a/rules.html
+++ b/rules.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <link rel="icon" type="image/png" href="img/favicon.png" />
+  <link rel="icon" type="image/png" href="img/osdhack-sticker.png" />
   <title>OSDHack'22 | Rules and FAQs</title>
 
   <!-- Google font -->
@@ -270,8 +270,9 @@
     <script>
       document.write(new Date().getFullYear());
     </script>
-    All rights reserved by
-    <a href="https://osdc.netlify.app/" target="_blank">OSDC</a>
+    <a href="https://osdc.netlify.app/" target="_blank">OSDC</a>. All rights
+    reserved.
+    <!-- <a href="https://osdc.netlify.app/" target="_blank">OSDC</a> -->
     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
     <!-- </span> -->
   </div>
