--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
               <a href="https://osdc.netlify.app/" target="_blank">
                 <h3 style="color: white">
                   Open Source<br />
-                  Developer's Club
+                  Developer's Community
                 </h3>
               </a>
             </div>
@@ -1073,10 +1073,9 @@
             <div class="contact" style="padding: 5px">
               <a href="https://celo.org/" target="_blank">
                 <div
-                  class="speaker-img"
+                  class="speaker-img celo"
                   style="
                     border-radius: 10px;
-                    padding: 10px;
                     background-color: rgb(255, 255, 255, 0.1);
                     margin-bottom: 15px;
                     height: 100%;
