corrected community name

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
               <a href="https://osdc.netlify.app/" target="_blank">
                 <h3 style="color: white">
                   Open Source<br />
-                  Developers Club
+                  Developers Community
                 </h3>
               </a>
             </div>
