--- a/rules.html
+++ b/rules.html
@@ -122,6 +122,7 @@
       seems like) is allowed, provided that they are appropriately attributed
       and their license agreements are followed.
     </li>
+    <li>Your project or the same underlying idea behind the project has not been knowingly submitted by you in any other hackathon/event before.</li>
 
     <li>
       All code written must be compatible with an Open-Source license and should
@@ -132,6 +133,7 @@
       The Organizing Team's decision on conflicts, results, prizes or any other
       dispute would be made in all fairness and stands final.
     </li>
+    
   </ul>
 
   <div class="faq">
