--- a/rules.html
+++ b/rules.html
@@ -112,13 +112,13 @@
       driver (as long as it is not a hardware project).
     </li>
     <li>
-      All code and assests must be created and committed within the time
+      All code and assets must be created and committed within the time
       constrictions of the Hackathon. Late commits may not be considered, so
       avoid any last minute Red Bull rushes.
     </li>
     <li>
       Reusing or incorporating existing open source code or copyright free
-      assests to create your magic (because that's what someone else's code
+      assets to create your magic (because that's what someone else's code
       seems like) is allowed, provided that they are appropriately attributed
       and their license agreements are followed.
     </li>
