Add DO as a sponsor

--- a/index.html
+++ b/index.html
@@ -1138,6 +1138,28 @@
               ></a>
             </div>
           </div>
+          <div class="col-sm-3 col-md-offset-5">
+            <div class="contact" style="padding: 5px">
+              <a href="https://www.digitalocean.com/" target="_blank">
+                <div
+                  class="speaker-img"
+                  style="
+                    border-radius: 10px;
+                    padding: 25px;
+                    background-color: rgb(255, 255, 255, 0.1);
+                    margin-bottom: 15px;
+                    height: 100%;
+                    width: 100;
+                  "
+                >
+                  <img
+                    src="img/DO_Logo_horizontal_blue.svg"
+                    alt=""
+                    style="height: 100%; width: 100%"
+                  /></div
+              ></a>
+            </div>
+          </div>
           <!-- contact -->
         </div>
       </div>
