Add Foss United as sponsor

--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
             <!--for begining-->
           </div>
           <!-- contact -->
-          <div class="col-sm-4">
+          <div class="col-sm-3">
             <div class="contact">
               <a href="https://devfolio.co/" target="_blank">
                 <div
@@ -1033,8 +1033,32 @@
               </a>
             </div>
           </div>
+          <!-- /contact -->
+          <div class="col-sm-3">
+            <div class="contact">
+              <a href="https://fossunited.org/" target="_blank">
+                <div
+                  class="speaker-img"
+                  style="
+                    border-radius: 10px;
+                    padding: 15px;
+                    background-color: rgb(255, 255, 255, 0.1);
+                    margin-bottom: 15px;
+                    height: 100%;
+                    width: 100;
+                  "
+                >
+                  <img
+                    src="img/foss-united-logo-white.png"
+                    alt=""
+                    style="height: 70px"
+                  />
+                </div>
+              </a>
+            </div>
+          </div>
           <!-- contact -->
-          <div class="col-sm-4">
+          <div class="col-sm-3">
             <div class="contact">
               <a href="https://polygon.technology/" target="_blank">
                 <div
