fixed sponsors placement

--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
               <span style="font-size: 40px">Sponsors</span>
             </h4>
           </div>
-          <div class="col-sm-2">
+          <div class="col-sm-2" style="width:12%">
             <!--for begining-->
           </div>
           <!-- contact -->
@@ -1041,7 +1041,7 @@
                   class="speaker-img"
                   style="
                     border-radius: 10px;
-                    padding: 15px;
+                    padding: 12px;
                     background-color: rgb(255, 255, 255, 0.1);
                     margin-bottom: 15px;
                     height: 100%;
@@ -1089,11 +1089,11 @@
               <span style="font-size: 40px">Sponsors</span>
             </h4>
           </div>
-          <div class="col-sm-2">
+          <div class="col-sm-2" style="width:16.5%">
             <!--for begining-->
           </div>
           <!-- contact -->
-          <div class="col-sm-3">
+          <div class="col-sm-2">
             <div class="contact" style="padding: 5px">
               <a href="https://celo.org/" target="_blank">
                 <div
@@ -1115,7 +1115,7 @@
             </div>
           </div>
           <!-- contact -->
-          <div class="col-sm-3">
+          <div class="col-sm-2">
             <div class="contact" style="padding: 5px">
               <a href="https://filecoin.io/" target="_blank">
                 <div
@@ -1140,7 +1140,7 @@
           </div>
 
           <!-- contact -->
-          <div class="col-sm-3">
+          <div class="col-sm-2">
             <div class="contact" style="padding: 5px">
               <a href="https://tezos.com/" target="_blank">
                 <div
@@ -1162,14 +1162,14 @@
               ></a>
             </div>
           </div>
-          <div class="col-sm-3 col-md-offset-5">
+          <div class="col-sm-2">
             <div class="contact" style="padding: 5px">
               <a href="https://www.digitalocean.com/" target="_blank">
                 <div
                   class="speaker-img"
                   style="
                     border-radius: 10px;
-                    padding: 25px;
+                    padding: 28px;
                     background-color: rgb(255, 255, 255, 0.1);
                     margin-bottom: 15px;
                     height: 100%;
