Fixed DigitalOcean and Foss United positions (#107)
* Add DO as a sponsor

* Add Foss United as sponsor

* fixed sponsors placement

Co-authored-by: Aaryan Porwal <aaryanporwal2233@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1006,11 +1006,11 @@
               <span style="font-size: 40px">Sponsors</span>
             </h4>
           </div>
-          <div class="col-sm-2">
+          <div class="col-sm-2" style="width:12%">
             <!--for begining-->
           </div>
           <!-- contact -->
-          <div class="col-sm-4">
+          <div class="col-sm-3">
             <div class="contact">
               <a href="https://devfolio.co/" target="_blank">
                 <div
@@ -1033,8 +1033,32 @@
               </a>
             </div>
           </div>
+          <!-- /contact -->
+          <div class="col-sm-3">
+            <div class="contact">
+              <a href="https://fossunited.org/" target="_blank">
+                <div
+                  class="speaker-img"
+                  style="
+                    border-radius: 10px;
+                    padding: 12px;
+                    background-color: rgb(255, 255, 255, 0.1);
+                    margin-bottom: 15px;
+                    height: 100%;
+                    width: 100;
+                  "
+                >
+                  <img
+                    src="img/foss-united-logo-white.png"
+                    alt=""
+                    style="height: 70px"
+                  />
+                </div>
+              </a>
+            </div>
+          </div>
           <!-- contact -->
-          <div class="col-sm-4">
+          <div class="col-sm-3">
             <div class="contact">
               <a href="https://polygon.technology/" target="_blank">
                 <div
@@ -1065,11 +1089,11 @@
               <span style="font-size: 40px">Sponsors</span>
             </h4>
           </div>
-          <div class="col-sm-2">
+          <div class="col-sm-2" style="width:16.5%">
             <!--for begining-->
           </div>
           <!-- contact -->
-          <div class="col-sm-3">
+          <div class="col-sm-2">
             <div class="contact" style="padding: 5px">
               <a href="https://celo.org/" target="_blank">
                 <div
@@ -1091,7 +1115,7 @@
             </div>
           </div>
           <!-- contact -->
-          <div class="col-sm-3">
+          <div class="col-sm-2">
             <div class="contact" style="padding: 5px">
               <a href="https://filecoin.io/" target="_blank">
                 <div
@@ -1116,7 +1140,7 @@
           </div>
 
           <!-- contact -->
-          <div class="col-sm-3">
+          <div class="col-sm-2">
             <div class="contact" style="padding: 5px">
               <a href="https://tezos.com/" target="_blank">
                 <div
@@ -1134,6 +1158,28 @@
                     src="img/Tezos_Logo-White.svg"
                     alt=""
                     style="height: 100%; width: 95%"
+                  /></div
+              ></a>
+            </div>
+          </div>
+          <div class="col-sm-2">
+            <div class="contact" style="padding: 5px">
+              <a href="https://www.digitalocean.com/" target="_blank">
+                <div
+                  class="speaker-img"
+                  style="
+                    border-radius: 10px;
+                    padding: 28px;
+                    background-color: rgb(255, 255, 255, 0.1);
+                    margin-bottom: 15px;
+                    height: 100%;
+                    width: 100;
+                  "
+                >
+                  <img
+                    src="img/DO_Logo_horizontal_blue.svg"
+                    alt=""
+                    style="height: 100%; width: 100%"
                   /></div
               ></a>
             </div>
