Add more photos from osdhack'19

--- a/index.html
+++ b/index.html
@@ -368,6 +368,44 @@
             <div class="galery-item">
               <img src="img/osdc_hack_1.jpeg" alt="" height="10px" />
             </div>
+
+            <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/IMG_6950.jpg" alt="" height="10px" />
+            </div>
+            <!-- /galery item -->
+
+            <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/makabharosa.jpg" alt="" height="10px" />
+            </div>
+            <!-- /galery item -->
+
+            <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/kreuzer.jpg" alt="" height="10px" />
+            </div>
+            <!-- /galery item -->
+
+            <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/noobgods.jpg" alt="" height="10px" />
+            </div>
+            <!-- /galery item -->
+
+            <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/random.jpg" alt="" height="10px" />
+            </div>
+            <!-- /galery item -->
+
+            <!-- galery item -->
+            <div class="galery-item">
+              <img src="img/powerpuffgirls.jpg" alt="" height="10px" />
+            </div>
+            <!-- /galery item -->
+
+            
             <!-- /galery item -->
           </div>
           <!-- /galery owl -->
