fixed 'coordinators' responsive section (#109)

--- a/index.html
+++ b/index.html
@@ -1243,10 +1243,10 @@
               </h4>
             </div>
             <!-- contact -->
-            <div class="col-xs-3 col-xs-offset-0">
-              <!--for beginning-->
+            <div class="col-md-3">
+              <!-- Empty div to align coordinators in center.  -->
             </div>
-            <div class="col-xs-3 col-xs-offset-0">
+            <div class="col-md-3">
               <div class="contact" style="padding: 5px">
                 <div
                   class="speaker-img"
@@ -1256,15 +1256,16 @@
                     background-color: rgb(255, 255, 255, 0.1);
                     margin-bottom: 15px;
                     height: 200px;
+                    
                   "
                 >
-                  <h2>Dr. Manish K. Thakur</h2>
+                  <h2 style="font-size: 1.7em;">Dr. Manish K. Thakur</h2>
                   <h4 style="color: #c71239">Faculty Coordinator</h4>
                 </div>
               </div>
             </div>
             <!-- contact -->
-            <div class="col-xs-3">
+            <div class="col-md-3">
               <div class="contact" style="padding: 5px">
                 <div
                   class="speaker-img"
@@ -1276,7 +1277,7 @@
                     height: 201px;
                   "
                 >
-                  <h2>Sarthak Kathpalia</h2>
+                  <h2 style="font-size: 1.7em;">Sarthak Kathpalia</h2>
                   <h4 style="color: #c71239">Student Coordinator</h4>
                   <a
                     href="https://www.linkedin.com/in/sarthak-kathpalia/"
@@ -1313,10 +1314,10 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-3">
+              <!-- empty div to center upar ka saaman  -->
+            </div>
           </div>
-          <!-- <div class="row" style="margin-right: 60px; margin-top: 20px;">
-				<div class="col-sm-2">
-					<for begining-->
         </div>
         <!-- contact -->
       </div>
