--- a/index.html
+++ b/index.html
@@ -478,72 +478,75 @@
           <!-- section title -->
           <div class="section-title section-title-prize">
             <h3 class="title"><span>Prizes</span></h3>
-            <div class="text-center" style="margin-top: 30px">
+            <!-- <div class="text-center" style="margin-top: 30px">
               <h2>Prizes over  <span style="color: #c71239">INR 1,00,000</span> and more</h2>
               <h2>Special Prizes for mini event winners 🎁</h2>
               <h3 style="margin-top: 30px;">Detailed Prize break-up TBA soon ⌛</h3>
-            </div>
+            </div> -->
           </div>
           <!-- /section title -->
 
           <!-- contact -->
 
-          <!-- <div class="col-sm-4">
+          <div class="col-sm-4">
             <div class="contact">
               <div
                 class="speaker-img"
                 style="margin-bottom: 15px; height: 150px; overflow: hidden"
               >
                 <img
-                  style="border-radius: 50%; transform: scale(1.1)"
-                  src="img/second.png"
+                  style="border-radius: 50%; transform: scale(1.2);"
+                  src="img/second_2.png"
                   alt=""
                 />
               </div>
               <h3>Rs 20,000</h3>
               <h4 style="margin-top: -10px">2nd Prize</h4>
             </div>
-          </div> -->
+          </div>
           <!-- contact -->
 
-          <!-- <div class="col-sm-4">
+          <div class="col-sm-4">
             <div class="contact">
               <div
                 class="speaker-img"
                 style="margin-bottom: 15px; height: 150px; overflow: hidden"
               >
                 <img
-                  style="border-radius: 50%; transform: scale(1.2)"
-                  src="img/first.png"
+                  style="border-radius: 50%; transform: scale(1.4);"
+                  src="img/first_1.png"
                   alt=""
                 />
               </div>
               <h3>Rs 30,000</h3>
               <h4 style="margin-top: -10px">1st Prize</h4>
             </div>
-          </div> -->
+          </div>
           <!-- contact -->
 
-          <!-- <div class="col-sm-4">
+          <div class="col-sm-4">
             <div class="contact">
               <div
                 class="speaker-img"
                 style="margin-bottom: 15px; height: 150px; overflow: hidden"
               >
-                <img style="border-radius: 50%" src="img/third.png" alt="" />
+                <img 
+                  style="border-radius: 50%;" 
+                  src="img/third_3.png" 
+                  alt="" />
               </div>
               <h3>Rs 10,000</h3>
               <h4 style="margin-top: -10px">3rd Prize</h4>
             </div>
           </div>
-        </div> -->
-        <!-- <div class="row">
+        </div>
+        <div class="row">
           <div id="demo" class="collapse">
-            <div class="col-sm-2"> -->
+            <div class="col-sm-2">
               <!--for begining-->
             <!-- </div> -->
             <!-- contact -->
-            <!-- <div class="col-sm-4">
+            <div class="col-sm-4">
               <div class="contact">
                 <div
                   class="speaker-img"
@@ -557,9 +560,9 @@
                   (Best JIIT-Only Team)
                 </h4>
               </div>
-            </div> -->
+            </div>
             <!-- contact -->
-            <!-- <div class="col-sm-4">
+            <div class="col-sm-4">
               <div class="contact">
                 <div
                   class="speaker-img"
@@ -601,7 +604,7 @@
       >
         Show More
       </button>
-    </div> -->
+    </div>
 
     <!-- Speakers -->
     <div id="guest_speakers" class="section">
