--- a/index.html
+++ b/index.html
@@ -492,16 +492,17 @@
             <div class="contact">
               <div
                 class="speaker-img"
-                style="margin-bottom: 15px; height: 150px; overflow: hidden"
+                style="margin-bottom: 15px; height: 150px; overflow: hidden; margin-top: 14%;"
               >
                 <img
-                  style="border-radius: 50%; transform: scale(1.2);"
                   src="img/second_2.png"
                   alt=""
                 />
               </div>
-              <h3>Rs 20,000</h3>
-              <h4 style="margin-top: -10px">2nd Prize</h4>
+              <h4 style="margin-top: -10px; font-size:20px;" class="prize-no">Runners-Up</h4>
+              <h3 class="prize-amt">Rs 25,000</h3>
+              <h3  class="prize-amt">+</h3>
+              <h3  class="prize-amt">DigitalOcean Credits worth $400</h3>
             </div>
           </div>
           <!-- contact -->
@@ -510,16 +511,17 @@
             <div class="contact">
               <div
                 class="speaker-img"
-                style="margin-bottom: 15px; height: 150px; overflow: hidden"
+                style="margin-bottom: 15px; height: 200px; overflow: hidden"
               >
                 <img
-                  style="border-radius: 50%; transform: scale(1.4);"
                   src="img/first_1.png"
                   alt=""
                 />
               </div>
-              <h3>Rs 30,000</h3>
-              <h4 style="margin-top: -10px">1st Prize</h4>
+              <h4 style="margin-top: -10px; font-size:20px;" class="prize-no">Winner</h4>
+              <h3  class="prize-amt">INR 35,000</h3>
+              <h3  class="prize-amt">+</h3>
+              <h3  class="prize-amt">DigitalOcean Credits worth $400</h3>
             </div>
           </div>
           <!-- contact -->
@@ -528,37 +530,39 @@
             <div class="contact">
               <div
                 class="speaker-img"
-                style="margin-bottom: 15px; height: 150px; overflow: hidden"
+                style="margin-bottom: 15px; height: 150px; overflow: hidden; margin-top: 14%;"
               >
                 <img 
-                  style="border-radius: 50%;" 
                   src="img/third_3.png" 
                   alt="" />
               </div>
-              <h3>Rs 10,000</h3>
-              <h4 style="margin-top: -10px">3rd Prize</h4>
+              <h4 style="margin-top: -10px; font-size:20px;" class="prize-no">Second Runners-Up</h4>
+              <h3 class="prize-amt">Rs 15,000</h3>
+              <h3 class="prize-amt">+</h3>
+              <h3 class="prize-amt">DigitalOcean Credits worth $400</h3>
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="margin-top: 4%;">
           <div id="demo" class="collapse">
-            <div class="col-sm-2">
-              <!--for begining-->
+            <div class="col-sm-8  col-md-offset-2">
+              <!-- <div class="col-sm-1">
+                for begining
+              </div> -->
             <!-- </div> -->
             <!-- contact -->
             <div class="col-sm-4">
               <div class="contact">
                 <div
                   class="speaker-img"
-                  style="margin-bottom: 15px; height: 150px; overflow: hidden"
+                  style="margin-bottom: 15px; height: 94px; overflow: hidden; margin-top: 25%;"
                 >
                   <img style="border-radius: 50%" src="img/cup.png" alt="" />
                 </div>
-                <h3>Rs 5,000</h3>
-                <h4 style="margin-top: -10px">
-                  Consolation Prize<br />
-                  (Best JIIT-Only Team)
-                </h4>
+                <h4 style="margin-top: -10px"  class="prize-no">
+                  Best JIIT-Only Team
+                </h4> 
+                <h3  class="prize-amt">Rs 5,000</h3>
               </div>
             </div>
             <!-- contact -->
@@ -570,13 +574,29 @@
                 >
                   <img style="border-radius: 50%" src="img/cup.png" alt="" />
                 </div>
-                <h3>Rs 5,000</h3>
-                <h4 style="margin-top: -10px">
-                  Consolation Prize <br />(Best Girls-Only Team)
+                <h4 style="margin-top: -10px"  class="prize-no">
+                  Open Source Track Winner
                 </h4>
+                <h3  class="prize-amt">Rs 15,000</h3>
               </div>
             </div>
-            <div class="col-sm-2"></div>
+            <!-- contact -->
+            <div class="col-sm-4">
+              <div class="contact">
+                <div
+                  class="speaker-img"
+                  style="margin-bottom: 15px; height: 94px; overflow: hidden; margin-top: 25%;"
+                >
+                  <img style="border-radius: 50%" src="img/cup.png" alt="" />
+                </div>
+                <h4 style="margin-top: -10px"  class="prize-no">
+                  Best JIIT Girls-Only Team<br>
+                </h4>
+                <div style="color:white;"></div>
+                <h3 class="prize-amt">Rs 5,000</h3>
+              </div>
+            </div>
+            <!-- <div class="col-sm-2"></div> -->
           </div>
         </div>
       </div>
