--- a/index.html
+++ b/index.html
@@ -488,11 +488,11 @@
 
           <!-- contact -->
 
-          <div class="col-sm-4">
+          <div class="col-sm-4" id="runner-up">
             <div class="contact">
               <div
-                class="speaker-img"
-                style="margin-bottom: 15px; height: 150px; overflow: hidden; margin-top: 14%;"
+                class="speaker-img prize-img"
+                style="margin-bottom: 15px; height: 150px; overflow: hidden;"
               >
                 <img
                   src="img/second_2.png"
@@ -500,14 +500,14 @@
                 />
               </div>
               <h4 style="margin-top: -10px; font-size:20px;" class="prize-no">Runners-Up</h4>
-              <h3 class="prize-amt">Rs 25,000</h3>
+              <h3 class="prize-amt">INR 25,000</h3>
               <h3  class="prize-amt">+</h3>
               <h3  class="prize-amt">DigitalOcean Credits worth $400</h3>
             </div>
           </div>
           <!-- contact -->
 
-          <div class="col-sm-4">
+          <div class="col-sm-4" id="winner">
             <div class="contact">
               <div
                 class="speaker-img"
@@ -529,15 +529,15 @@
           <div class="col-sm-4">
             <div class="contact">
               <div
-                class="speaker-img"
-                style="margin-bottom: 15px; height: 150px; overflow: hidden; margin-top: 14%;"
+                class="speaker-img prize-img"
+                style="margin-bottom: 15px; height: 150px; overflow: hidden;"
               >
                 <img 
                   src="img/third_3.png" 
                   alt="" />
               </div>
               <h4 style="margin-top: -10px; font-size:20px;" class="prize-no">Second Runners-Up</h4>
-              <h3 class="prize-amt">Rs 15,000</h3>
+              <h3 class="prize-amt">INR 15,000</h3>
               <h3 class="prize-amt">+</h3>
               <h3 class="prize-amt">DigitalOcean Credits worth $400</h3>
             </div>
@@ -545,31 +545,31 @@
         </div>
         <div class="row" style="margin-top: 4%;">
           <div id="demo" class="collapse">
-            <div class="col-sm-8  col-md-offset-2">
+            <div class="col-sm-12">
               <!-- <div class="col-sm-1">
                 for begining
               </div> -->
             <!-- </div> -->
             <!-- contact -->
             <div class="col-sm-4">
-              <div class="contact">
+              <div class="contact" id="jiit-only">
                 <div
-                  class="speaker-img"
-                  style="margin-bottom: 15px; height: 94px; overflow: hidden; margin-top: 25%;"
+                  class="speaker-img jiit-only-img"
+                  style="margin-bottom: 15px; height: 94px; overflow: hidden;"
                 >
                   <img style="border-radius: 50%" src="img/cup.png" alt="" />
                 </div>
                 <h4 style="margin-top: -10px"  class="prize-no">
                   Best JIIT-Only Team
                 </h4> 
-                <h3  class="prize-amt">Rs 5,000</h3>
+                <h3  class="prize-amt">INR 5,000</h3>
               </div>
             </div>
             <!-- contact -->
             <div class="col-sm-4">
               <div class="contact">
                 <div
-                  class="speaker-img"
+                  class="speaker-img oss-track"
                   style="margin-bottom: 15px; height: 150px; overflow: hidden"
                 >
                   <img style="border-radius: 50%" src="img/cup.png" alt="" />
@@ -577,15 +577,15 @@
                 <h4 style="margin-top: -10px"  class="prize-no">
                   Open Source Track Winner
                 </h4>
-                <h3  class="prize-amt">Rs 15,000</h3>
+                <h3  class="prize-amt">INR 10,000</h3>
               </div>
             </div>
             <!-- contact -->
             <div class="col-sm-4">
-              <div class="contact">
+              <div class="contact"  id="girls-only">
                 <div
-                  class="speaker-img"
-                  style="margin-bottom: 15px; height: 94px; overflow: hidden; margin-top: 25%;"
+                  class="speaker-img jiit-only-img"
+                  style="margin-bottom: 15px; height: 94px; overflow: hidden;"
                 >
                   <img style="border-radius: 50%" src="img/cup.png" alt="" />
                 </div>
@@ -593,7 +593,7 @@
                   Best JIIT Girls-Only Team<br>
                 </h4>
                 <div style="color:white;"></div>
-                <h3 class="prize-amt">Rs 5,000</h3>
+                <h3 class="prize-amt">INR 5,000</h3>
               </div>
             </div>
             <!-- <div class="col-sm-2"></div> -->
