added oss-track details

--- a/rules.html
+++ b/rules.html
@@ -103,7 +103,7 @@
 
   <h1>Rules</h1>
   <hr class="style-two" />
-  <ul class="rules">
+  <ul class="rules" style="padding-bottom:1%">
     <li>The Hackathon is open to all.</li>
     <li>Allowed team size: 2-4 members.</li>
     <li>
@@ -133,13 +133,22 @@
       The Organizing Team's decision on conflicts, results, prizes or any other
       dispute would be made in all fairness and stands final.
     </li>
-    
+  </ul>
+  <ul class="rules" style="margin-bottom:2%;" id="oss-track">
+    <li type="none">
+      <h2 style="color:#c71239;">OSS Track</h2>
+    </li>
+    <li>Being really passionate about  Free/Open-Source Software, we have a separate track track
+      aimed at improving the same. The OSS Track Prize will be awarded to the best project that fills
+      an existing gap in any Open-Source ecosystem. You will have to explain the gap and your solution 
+      in your demo. Feel free to ask away on Discord if you need any clarifications.
+    </li>
   </ul>
 
   <div class="faq">
     <h1>FAQs</h1>
     <hr class="style-two" />
-    <div class="global-label"></div>
+    <div class="global-label" style="margin-bottom:0;"></div>
     <!--1 question-->
     <div>
       <div class="faq-label">
