--- a/index.html
+++ b/index.html
@@ -578,6 +578,7 @@
                   Open Source Track Winner
                 </h4>
                 <h3  class="prize-amt">INR 10,000</h3>
+                <a href="rules.html#oss-track"><h4>More details about the track here</h4></a>
               </div>
             </div>
             <!-- contact -->
